versions/v2.8/modules/en/pages/cluster-admin/project-admin/project-resource-quotas/override-default-limit-in-namespaces.adoc
= Overriding the Default Limit for a Namespace
:page-languages: [en, zh]
:revdate: 2024-11-19
:page-revdate: {revdate}
:experimental:

Although the *Namespace Default Limit* propagates from the project to each namespace when created, in some cases, you may need to increase (or decrease) the quotas for a specific namespace. In this situation, you can override the default limits by editing the namespace.

In the diagram below, the Rancher administrator has a resource quota in effect for their project. However, the administrator wants to override the namespace limits for `Namespace 3` so that it has more resources available. Therefore, the administrator xref:cluster-admin/manage-clusters/projects-and-namespaces.adoc[raises the namespace limits] for `Namespace 3` so that the namespace can access more resources.

^Namespace Default Limit Override^

image::rancher-resource-quota-override.svg[Namespace Default Limit Override]

How to: xref:cluster-admin/manage-clusters/projects-and-namespaces.adoc[Editing Namespace Resource Quotas]

== Editing Namespace Resource Quotas

If there is a resource quota configured for a project, you can override the namespace default limit to provide a specific namespace with access to more (or less) project resources.

. In the upper left corner, click *☰ > Cluster Management*.
. On the *Clusters* page, go to the cluster where you want to edit a namespace resource quota and click *Explore*.
. Click menu:Cluster[Projects/Namespaces].
. Find the namespace for which you want to edit the resource quota. Click *⋮ > Edit Config*.
. Edit the resource limits.  These limits determine the resources available to the namespace. The limits must be set within the configured project limits.
+
For more information about each *Resource Type*, see xref:cluster-admin/project-admin/project-resource-quotas/resource-quota-types.adoc[the type reference].
+

[NOTE]
====

 ** If a resource quota is not configured for the project, these options will not be available.
 ** If you enter limits that exceed the configured project limits, Rancher will not let you save your edits.

+
====


*Result:* Your override is applied to the namespace's resource quota.
